# byedpi-rs

./: .gitignore  Cargo.toml  Justfile  rust-toolchain.toml
docs/: migration_audit.md
scripts/: e2e_compare.sh  migration_audit.sh
src/: conev.rs  desync.rs  error.rs  extend.rs  kavl.rs  main.rs  main_util.rs  mpool.rs  packets.rs  params.rs  proxy.rs  win_service.rs
src/proxy/: http_connect.rs  socks5.rs  udp.rs
